Adding launchfile for relay and offboard simulation

--- a/offboard_companion/CMakeLists.txt
+++ b/offboard_companion/CMakeLists.txt
@@ -30,6 +30,12 @@ endif()
 # Install Python modules
 ament_python_install_package(${PROJECT_NAME})
 
+
+install(
+  DIRECTORY launch
+  DESTINATION share/${PROJECT_NAME}
+)
+
 # Install Python executables
 install(PROGRAMS
   src/nodes/offboard_node/offboard_control.py
